rabbitmq.tf
// 1. Security Group
resource "aws_security_group" "rabbitmq-security-group" {
  name        = "rabbitmq-security-group"
  description = "Allow RabbitMQ inbound traffic"
  vpc_id      = aws_vpc.iac-vpc.id

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["39.7.24.115/32"]
    ipv6_cidr_blocks = []
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = []
  }

  tags = {
    Name = "rabbitmq-security-group"
  }
}

// 2. RabbitMQ
resource "aws_mq_broker" "rabbitmq" {
  broker_name        = "rabbitmq"

  engine_type        = "RabbitMQ"
  engine_version     = "3.8.6"
  host_instance_type = "mq.t3.micro"

  publicly_accessible = true
  subnet_ids = [aws_subnet.iac-subnet-1.id]

  user {
    username = "rhea-so"
    password = "1234qwer1234qwer"
  }
}
